--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,39 +1,62 @@
-<html lang="en">
+<html lang='en'>
 
   <head>
-    <nav class="navbar bg-dark" style="display: flex;">
-      <div class="container-fluid" style="justify-content:space-between">
-        <a class="navbar-brand" href="/" style="color: white">
-          <i class="fa-regular fa-user"></i>
+    <meta charset='UTF-8' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <title>私房錢底加</title>
+
+    <!-- bootstraps -->
+    <link
+      href='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css'
+      rel='stylesheet'
+      integrity='sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx'
+      crossorigin='anonymous'
+    />
+
+    {{! font-awesome }}
+    <script src='https://kit.fontawesome.com/750228b3da.js' crossorigin='anonymous'></script>
+    {{! google font }}
+    <link rel='preconnect' href='https://fonts.googleapis.com' />
+    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
+    <link href='https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap' rel='stylesheet' />
+    {{! CSS }}
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    {{! chart.js }}
+    <script
+      src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js'
+      integrity='sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA=='
+      crossorigin='anonymous'
+      referrerpolicy='no-referrer'
+    ></script>
+
+  </head>
+
+  <body class='bg-light'>
+    <nav class='navbar navbar-dark bg-dark'>
+      <div class='container-fluid'>
+        <a class='navbar-brand' href='/'>
+          <span><i class='fad fa-bullhorn fa'></i></span>
           {{#if isAuthenticated}}{{user.name}}'s {{/if}}
-          Expense Tracker
+          記帳本
         </a>
         {{#if isAuthenticated}}
-          <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+          <a href='/user/logout'><button class='btn btn-outline-light me-2' type='button'>登出</button></a>
         {{else}}
-          <a href="/users/login" class="btn btn-outline-light">Login</a>
+          <a href='/user/login'><button class='btn btn-light me-2' type='button'>登入</button></a>
+
         {{/if}}
       </div>
     </nav>
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
-      crossorigin="anonymous"
-    />
-  </head>
-
-  <body>
     {{{body}}}
+    {{! sweetalert }}
+    <script src='https://unpkg.com/sweetalert/dist/sweetalert.min.js'></script>
+    {{! boostraps & popper }}
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
-      crossorigin="anonymous"
+      src='https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js'
+      integrity='sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa'
+      crossorigin='anonymous'
     ></script>
   </body>
 
