--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,65 +1,58 @@
-<div class="form-container m-3" style="display:flex;justify-content:center;">
-  <form action="/expense" method="POST" style="item-align:center">
-    <div class="container">
+<div class="row mt-3 p-4">
+  <div class="col-sm-5 m-auto bg-white bg-opacity-50 rounded">
+<div class="my-3 row">
+  <small class="require-mark col-sm-3">為必填欄位</small>
+  <h3 class="col-sm-9 text-center">
+    請輸入你的支出
+  </h3>
+</div>
 
-      <div class="mt-5" style="display:flex;justify-content:space-around">
-        <div class="pt-3">
-          <a style="font-size: x-small;"><span
-            class="text-danger"
-          >*</span>為必填欄位</a>
+    <form action="/record/" method="post" id="new-form" class="mt-3">
+      <div class="mb-3 row">
+        <label for="name" class="col-lg-3 col-form-label text-center"><span><i class="fas fa-highlighter"></i></span>名稱</label>
+        <div class="col-lg-9">
+          <input type="text" class="form-control" name="name" id="name" required>
         </div>
-        <div style="display:flex;justify-content:center">
-          <h4>請輸入支出項目</h4>
+      </div>
+      <div class="mb-3 row">
+        <label for="date" class="col-lg-3 col-form-label text-center"><span><i class="fas fa-table"></i></span>日期</label>
+        <div class="col-lg-9">
+          <input type="date" class="form-control" name="date" id="date" required>
         </div>
       </div>
-
-      <div class="mt-3 mb-3">
-        <label for="name" class="me-4"><span
-            class="text-danger"
-          >*</span>名稱：</label>
-        <input type="text" id="name" name="name"
-          style="height:40px;width:220px;border:1px solid black;border-radius:5px;vertical-align:center" {{#if
-          name}}value="{{name}}" {{/if}} required>
+      <div class="mb-3 row">
+        <label for="category" class="col-lg-3 col-form-label text-center"><span><i class="fas fa-list"></i></span>類別</label>
+        <div class="col-lg-9">
+          <select class="form-select" aria-label="Default select example" 
+          name="categoryId" id="category" required>
+            {{!-- <option>請選擇</option> --}}
+            {{#each categories}}
+            <option value="{{ this._id }}">{{ this.name }}</option>
+            {{/each}}
+          </select>
+        </div>
       </div>
-
-      <div class="mt-5 mb-3">
-        <label for="date" class="me-4"><span
-            class="text-danger"
-          >*</span>日期：</label>
-        <input type="date" id="date" name="date"
-          style="height:40px;width:220px;border:1px solid black;border-radius:5px;vertical-align:center" {{#if
-          name}}value="{{date}}" {{/if}} required>
+      <div class="mb-3 row">
+        <label for="amount" class="col-lg-3 col-form-label text-center"><span><i class="fas fa-sack-dollar"></i></span>金額</label>
+        <div class="col-lg-9">
+          <input type="number" class="form-control" name="amount" id="amount" min="0" required>
+        </div>
       </div>
+      <div class="mb-3 row justify-content-end">
+        <div class="col-lg-9">
+          <button type="submit" class=" btn w-100" id="submitButton">新增支出</button>
+        </div>
 
-      <div class="mt-5 mb-3" style="display: flex;">
-        <label for="category" class="me-4" style="vertical-align:center"><span
-            class="text-danger"
-          >*</span>類別：</label>
-        <select class="form-select col" id="categoryId" style="width:220px;border:1px solid black" name="categoryId"
-          required>
-          <option selected disabled hidden>請選擇</option>
-          {{#each categories}}
-          <option value="{{this._id}}">{{this.name}}</option>
-          {{/each}}
-        </select>
       </div>
-
-      <div class="mt-5 mb-3">
-        <label for="cost" class="me-4"><span
-            class="text-danger"
-          >*</span>金額：</label>
-        <input type="number" id="cost" name="cost"
-          style="height:40px;width:220px;border:1px solid black;border-radius:5px;vertical-align:center" {{#if
-          cost}}value="{{cost}}" {{/if}} required>
-      </div>
-
-      <div class="mb-3" style="display:flex;justify-content:center">
-        <button
-          class="btn btn-outline-primary mx-3 mt-3 mb-3"
-          type="submit"
-        >新增</button>
-        <a class="btn btn-outline-primary mx-3 mt-3 mb-3" href="/">返回</a>
-      </div>
-    </div>
+  </div>
   </form>
 </div>
+</div>
+
+<script>
+  const submitButton = document.querySelector('#submitButton')
+const form  = document.querySelector('#new-form')
+submitButton.addEventListener('click', function onSubmitButtonClicked(event) {
+  form.classList.add('was-validated')
+})
+</script>
