--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,72 +1,43 @@
-<div class="container mt-5" id="register-page">
-  <div class="row justify-content-center">
-    <div class="card card-body" style="max-width: 450px;">
-      <h3 class="text-center">註冊</h3>
-      {{>message}}
-      <form action="/users/register" method="POST">
-        <div class="form-group">
-          <label for="name">名稱</label>
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            name="name"
-            placeholder="請輸入名稱"
-            maxlength="50"
-            value="{{name}}"
-            required
-          />
+<div class="row m-4 ">
+  <div class="col-md-5 m-auto bg-light bg-opacity-25 shadow rounded py-2">
+    <h3 class="text-center  text-dark">Sign up</h3>
+    <hr>
+    <div class="col-md-10 m-auto">
+      {{> message}}
+      <form action="/user/register" method="POST" id="register-form">
+        <div id="user-input" class="m-auto my-3 p-2 d-flex  shadow">
+          <i class="fa-solid fa-user mx-2 pt-1"></i>
+          <input type="text" id="name" name="name" class="form-control" placeholder="Name"
+            value="{{ registerData.name }}" required>
         </div>
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            name="email"
-            placeholder="請輸入Email"
-            value="{{email}}"
-            required
-          />
+        <div id="user-input" class="m-auto my-3 p-2 d-flex shadow">
+          <i class="fas fa-envelope mx-2 pt-1"></i>
+          <input type="email" id="email" name="email" class="form-control" placeholder="Email"
+            value="{{ registerData.email }}" required>
         </div>
-        <div class="form-group">
-          <label for="password">密碼</label>
-          <input
-            type="password"
-            class="form-control"
-            id="password"
-            name="password"
-            placeholder="請輸入 8 ~ 12 位密碼"
-            maxlength="12"
-            minlength="8"
-            autocomplete="off"
-            value="{{password}}"
-            required
-          />
+        <div id="user-input" class="m-auto my-3 p-2 d-flex shadow">
+          <i class="fas fa-lock mx-2 pt-1"></i>
+          <input type="password" id="password" name="password" class="form-control" placeholder="Password"
+            value="{{ registerData.password }}" required>
         </div>
-        <div class="form-group">
-          <label for="confirmPassword">確認密碼</label>
-          <input
-            type="password"
-            class="form-control"
-            id="confirmPassword"
-            name="confirmPassword"
-            placeholder="請再次確認密碼"
-            maxlength="12"
-            minlength="8"
-            autocomplete="off"
-            value="{{confirmPassword}}"
-            required
-          />
+        <div id="user-input" class="m-auto my-3 p-2 d-flex shadow">
+          <i class="fas fa-unlock-alt mx-2 pt-1"></i>
+          <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
+            placeholder="ConfirmPassword" value="{{ registerData.confirmPassword }}" required>
         </div>
-        <button
-          class="btn btn-primary btn-block mt-3"
-          type="submit"
-        >註冊</button>
-        <a href="/auth/facebook" class="btn btn-info btn-block mt-3">Facebook
-          登入</a>
+
+        <div class="m-auto my-3 d-flex">
+          <button class="btn btn-danger w-100 shadow" onclick="formCheck()">Register</button>
+        </div>
       </form>
-      <p class="lead">已註冊？<a href="/users/login">登入</a></p>
+      <p class="text-center ">Have an account？<a href="/user/login" class="loginMsg">立即登入</a></p>
     </div>
   </div>
 </div>
+
+<script>
+  const formCheck = () => {
+    const form = document.querySelector('#register-form')
+    form.classList.add('was-validated')
+  }
+</script>
